Closed Bug 1200477 Opened 10 years ago Closed 10 years ago

Can't compile Firefox with --disable-webrtc (error: ‘gCamerasParentLog’ was not declared in this scope)

Categories

(Core :: Audio/Video, defect)

43 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: u532768, Unassigned)

References

Details

Attachments

(3 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:43.0) Gecko/20100101 Firefox/43.0 Build ID: 20150828164821 Steps to reproduce: hg pull -u ./mach build Actual results: 16:28.86 gzclose.o 16:33.50 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media/systemservices/Unified_cpp_systemservices0.cpp:74:0: 16:33.50 /mnt/to_archive/accum/src/mozilla-central/dom/media/systemservices/ShmemPool.cpp: In member function ‘mozilla::ShmemBuffer mozilla::ShmemPool::Get(T*, size_t)’: 16:33.50 /mnt/to_archive/accum/src/mozilla-central/dom/media/systemservices/ShmemPool.cpp:76:40: error: ‘gCamerasParentLog’ was not declared in this scope 16:33.50 LOG(("Initiaizing new Shmem in pool")); 16:33.50 ^ 16:33.50 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media/systemservices/Unified_cpp_systemservices0.cpp:74:0: 16:33.50 /mnt/to_archive/accum/src/mozilla-central/dom/media/systemservices/ShmemPool.cpp:86:40: error: ‘gCamerasParentLog’ was not declared in this scope 16:33.50 LOG(("Size change/increase in Shmem Pool")); 16:33.50 ^ 16:33.50 /mnt/to_archive/accum/src/mozilla-central/dom/media/systemservices/ShmemPool.cpp:90:42: error: ‘gCamerasParentLog’ was not declared in this scope 16:33.50 LOG(("Failure allocating new size Shmem buffer")); 16:33.50 ^ 16:33.50 16:33.51 In the directory /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media/systemservices 16:33.51 The following command failed to execute properly: 16:33.51 /bin/ccache c++ -o Unified_cpp_systemservices0.o -c -I../../../dist/stl_wrappers -I../../../dist/system_wrappers -include /mnt/to_archive/accum/src/mozilla-central/config/gcc_hidden.h -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABL E_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DAB_CD=en-US -DNO_NSPR_10_SUPPORT -I/mnt/to_archive/accum/src/mozilla-central/dom/media/systemservices -I. -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/ipc/ipdl/_ ipdlheaders -I/mnt/to_archive/accum/src/mozilla-central/dom/base -I/mnt/to_archive/accum/src/mozilla-central/ipc/chromium/src -I/mnt/to_archive/accum/src/mozilla-central/ipc/glue -I../../../dist/include -I/mnt/to_archive/accum/src/mozill a-central/obj-x86_64-unknown-linux-gnu/dist/include/nspr -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/include/nss -fPIC -DMOZILLA_CLIENT -include ../../../mozilla-config.h -MD -MP -MF .deps/Unified_cpp_sy stemservices0.o.pp -Wall -Wempty-body -Woverloaded-virtual -Wsign-compare -Wwrite-strings -Wno-invalid-offsetof -Wcast-align -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -std=gnu++0x -pthread -pipe -DNDE BUG -DTRIMMED -g -O3 -fomit-frame-pointer /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media/systemservices/Unified_cpp_systemservices0.cpp 16:33.51 /mnt/to_archive/accum/src/mozilla-central/config/rules.mk:958: recipe for target 'Unified_cpp_systemservices0.o' failed 16:33.51 gmake[5]: *** [Unified_cpp_systemservices0.o] Error 1 16:33.51 /mnt/to_archive/accum/src/mozilla-central/config/recurse.mk:71: recipe for target 'dom/media/systemservices/target' failed 16:33.51 gmake[4]: *** [dom/media/systemservices/target] Error 2 16:33.51 gmake[4]: *** Waiting for unfinished jobs.... Expected results: PASS PASS
My error. The subject says that it was the nightly from the 29th. It was actually the nightly from today, the 31st. The nightly from last Friday, the 28th, compiled and runs just fine.
Summary: nightly, 20150829, compile error: ‘gCamerasParentLog’ was not declared in this scope → nightly, 20150831, compile error: ‘gCamerasParentLog’ was not declared in this scope
Compile still failing with the latest nightly, same error.
Not sure if this bug is still happening, since I am getting another bug before it reaches this one.
I can confirm the same bug with nightly.
Attached patch gcam.patchSplinter Review
does this help?
Attachment #8658552 - Flags: review?(florian)
Attachment #8658552 - Flags: review?(florian) → review?(gpascutto)
Blocks: 1104616
Component: Untriaged → Audio/Video
Product: Firefox → Core
Comment on attachment 8658552 [details] [diff] [review] gcam.patch Review of attachment 8658552 [details] [diff] [review]: ----------------------------------------------------------------- I think this needs at least an "extern". Also, from testing this doesn't solve the problem completely as MediaParent.cpp will fail when webrtc is disabled.
Attachment #8658552 - Flags: review?(gpascutto) → review-
Summary: nightly, 20150831, compile error: ‘gCamerasParentLog’ was not declared in this scope → Can't compile Firefox with WebRTC disabled (error: ‘gCamerasParentLog’ was not declared in this scope)
[Upgrading status from UNCONFIRMED to NEW, as I'm hitting this locally when trying to build mozilla-central with --disable-webrtc.]
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Can't compile Firefox with WebRTC disabled (error: ‘gCamerasParentLog’ was not declared in this scope) → Can't compile Firefox with --disable-webrtc (error: ‘gCamerasParentLog’ was not declared in this scope)
See Also: → 1204382
Fixing the superficial compile problems was easy, but the problem is with the whole PCameras machinery. Apparently we can't do #ifdefs inside IPDL files, so we'll have to add stubs like here: https://bugzilla.mozilla.org/show_bug.cgi?id=1075049
Attachment #8661146 - Flags: review?(mrbkap)
Attachment #8661146 - Flags: review?(mh+mozilla)
Attachment #8661146 - Flags: review?(mh+mozilla) → review+
Attachment #8661146 - Flags: review?(mrbkap) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: