Bug 1200477 - Allow building with WebRTC disabled. r=glandium,mrbkap