ipc/glue/BackgroundChildImpl.cpp
@@ -8,7 +8,9 @@
 #include "BroadcastChannelChild.h"
 #include "ServiceWorkerManagerChild.h"
 #include "FileDescriptorSetChild.h"
+#ifdef MOZ_WEBRTC
 #include "CamerasChild.h"
+#endif
 #include "mozilla/media/MediaChild.h"
 #include "mozilla/Assertions.h"
 #include "mozilla/dom/PBlobChild.h"
@@ -271,17 +273,23 @@ BackgroundChildImpl::DeallocPBroadcastChannelChild(
 camera::PCamerasChild*
 BackgroundChildImpl::AllocPCamerasChild()
 {
+#ifdef MOZ_WEBRTC
   nsRefPtr<camera::CamerasChild> agent =
     new camera::CamerasChild();
   return agent.forget().take();
+#else
+  return nullptr;
+#endif
 }
 
 bool
 BackgroundChildImpl::DeallocPCamerasChild(camera::PCamerasChild *aActor)
 {
+#ifdef MOZ_WEBRTC
   nsRefPtr<camera::CamerasChild> child =
       dont_AddRef(static_cast<camera::CamerasChild*>(aActor));
   MOZ_ASSERT(aActor);
+#endif
   return true;
 }
 
